Bug 1721127 - Apply win32 printing surface fix from https://gitlab.freedesktop.org/cairo/cairo/-/merge_requests/228. r=jrmuizel, a=RyanVM

(Updated patch following discussion with @psychon/@ajohnson in the upstream cairo MR.)

Differential Revision: https://phabricator.services.mozilla.com/D121602